# juno-optimizer

./: .gitignore  Cargo.toml
juno/: Cargo.toml
juno/benches/: trade_benchmark.rs
juno/src/: candles.rs  easing.rs  lib.rs  math.rs  storage.rs  time.rs
juno/src/candles/: exchange.rs  mod.rs
juno/src/clients/: juno_core.rs  mod.rs
juno/src/genetics/: algorithm.rs  crossover.rs  mod.rs  mutation.rs  reinsertion.rs
juno/src/indicators/: ema.rs  mod.rs
juno/src/primitives/: interval.rs  mod.rs  symbol.rs  timestamp.rs
juno/src/statistics/: core.rs  extended.rs  mod.rs
juno/src/stop_loss/: basic.rs  basic_plus_trailing.rs  legacy.rs  mod.rs  noop.rs  trailing.rs
juno/src/strategies/: double_ma.rs  double_ma_2.rs  double_ma_stoch.rs  four_week_rule.rs  macd.rs  mod.rs  rsi.rs  sig.rs  sig_osc.rs  single_ma.rs  stoch.rs  triple_ma.rs
juno/src/take_profit/: basic.rs  legacy.rs  mod.rs  noop.rs  trending.rs
juno/src/trading/: evaluation.rs  mod.rs  traders.rs
juno/src/utils/: buffered_candle.rs  mid_trend.rs  mod.rs
juno/tests/: test_chromosome.rs  test_chromosome_enum.rs  test_indicators.rs  test_strategies.rs
juno/tests/data/: binance_eth-btc_1d_2018-01-01_2021-01-01_candles.json  binance_exchange_info.json  strategies.json
juno_axum/: Cargo.toml
juno_axum/src/: error.rs  exchange.rs  main.rs
juno_axum/src/routes/: backtest.rs  mod.rs  optimize.rs
juno_derive/: Cargo.toml
juno_derive/src/: util.rs
juno_derive/src/macros/: derive_chromosome.rs  derive_chromosome_enum.rs  derive_signal.rs
juno_warp/: Cargo.toml
juno_warp/src/: main.rs
juno_warp/src/routes/: backtest.rs  candles.rs  mod.rs  optimize.rs
