[package]
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2021"
name = "juno"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
bounded-vec-deque = "0.1"
ezing = "0.2"
futures = "0.3"
itertools = "0.10"
juno_derive = { version = "0.1", path = "../juno_derive" }
ndarray = "0.15"
ndarray-stats = "0.5"
once_cell = "1"
rand = "0.8"
rayon = "1"
regex = "1"
reqwest = { version = "0.11", features = [
    "native-tls",
    "json",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.4"
serde_yaml = "0.9"

[[bench]]
harness = false
name = "trade_benchmark"
path = "benches/trade_benchmark.rs"
