[package]
name = "juno_axum"
version = "0.1.0"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
futures = "0.3"
itertools = "0.10"
juno = { version = "0.1", path = "../juno" }
juno_derive = { version = "0.1", path = "../juno_derive" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rayon = "2"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
