[package]
name = "juno_warp"
version = "0.1.0"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
juno_derive = { version = "0.1", path = "../juno_derive" }
juno = { version = "0.1", path = "../juno" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
